--- a/package.json
+++ b/package.json
@@ -25,11 +25,11 @@
     "gatsby-plugin-emotion": "^5.2.0",
     "gatsby-plugin-google-analytics": "^2.9.0",
     "gatsby-plugin-mdx": "^1.8.0",
+    "gatsby-plugin-postcss": "^3.6.0",
     "gatsby-plugin-sharp": "^2.12.2",
     "gatsby-plugin-sitemap": "^2.10.0",
     "gatsby-source-filesystem": "^2.9.1",
     "gatsby-transformer-sharp": "^2.10.1",
-    "postcss": "^8.2.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "tailwindcss": "^2.0.2"
