--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gatsby-plugin-google-analytics": "^2.9.0",
     "gatsby-plugin-mdx": "^1.8.0",
     "gatsby-plugin-postcss": "^3.6.0",
+    "gatsby-plugin-scroll-reveal": "0.0.7",
     "gatsby-plugin-sharp": "^2.12.2",
     "gatsby-plugin-sitemap": "^2.10.0",
     "gatsby-source-filesystem": "^2.9.1",
